test/compile_errors/err_goto_duplicate_label.w
//! expect-check-fail: duplicate label 'again

fn main:
    'again 0
    'again 1
